feat: Added material package and also set up the theme variables

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,9 +1,10 @@
 @import '/src/styles.scss';
 
 header{
-  // background-color: $white;
+  background-color: $white;
   // border-bottom: 1px solid $light-gray;
   // height: 90px;
+  width: 100%;
 }
 
 header img{
