--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,3 @@
-<header>
-  <img src="assets/images/logo.png" alt="Logo - My Money in Market">
+<header class="header">
+  <app-logo></app-logo>
 </header>
