--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,13 +1,7 @@
-@import '/src/styles.scss';
+@import "/src/styles.scss";
 
-header{
+.header {
   background-color: $white;
-  // border-bottom: 1px solid $light-gray;
-  // height: 90px;
   width: 100%;
-}
-
-header img{
-  max-width: 100%;
-  height: auto;
+  padding: 8px;
 }
