feat: Added card component

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,35 @@
 <section>
+  <div class="container">
+    <div class="col col-12">
+      <app-card>
+        <h1>Pingo Doce</h1>
+      </app-card>
+    </div>
+    <div class="col col-6">
+      <app-card>
+        <span>Média de compras</span>
+      </app-card>
+    </div>
+    <div class="col col-6">
+      <app-card>
+        <span>Meu Saldo</span>
+      </app-card>
+    </div>
+    <div class="col col-6">
+      <app-card>
+        <span>Histórico</span>
+      </app-card>
+    </div>
+    <div class="col col-6">
+      <app-card>
+        <span>Mercado Favorito</span>
+      </app-card>
+    </div>
+    <div class="col col-12">
+      <app-card>
+        <h1>Última Compra</h1>
+      </app-card>
+    </div>
+  </div>
   <button mat-raised-button color="primary">Começar</button>
 </section>
